# paryxa

./: .env.sample  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2018-10-20-103125_users/: up.sql
migrations/2018-10-20-110206_test_papers/: down.sql  up.sql
migrations/2018-10-20-110428_test_questions/: down.sql  up.sql
migrations/2018-10-20-110954_question_options/: up.sql
migrations/2018-10-20-111223_test_schedules/: down.sql  up.sql
migrations/2018-10-20-112101_test_subscriptions/: down.sql  up.sql
migrations/2018-10-20-112911_test_attempts/: down.sql  up.sql
migrations/2018-10-20-112911_test_rooms/: down.sql  up.sql
migrations/2018-10-20-113343_question_answers/: down.sql  up.sql
src/: basic.rs  db_types.rs  errors.rs  gql_schema.rs  graphql.rs  lib.rs  main.rs  schema.rs
src/handlers/: mod.rs  user_handler.rs
src/models/: mod.rs  question_answer.rs  question_option.rs  test_attempt.rs  test_paper.rs  test_question.rs  test_room.rs  test_schedule.rs  test_subscription.rs  user.rs
webapp/: package.json
webapp/public/: index.html
webapp/src/: App.jsx  AuthenticatedUser.jsx  Form.jsx  GettingStarted.jsx  InfoBeforeTest.jsx  Login.jsx  NavigationBar.jsx  Profile.jsx  ProfileSetting.jsx  ProfileSettingsMenu.jsx  ReportCard.jsx  Settings.jsx  SignUp.jsx  SolvedQuestions.jsx  TestComplete.jsx  TestsDashboard.jsx  UpdateMyCredentials.jsx  UpdateMyInfo.jsx  UserAccountSetting.jsx  UserDashboard.jsx  VerifyAccount.jsx
webapp/src/dashboard/: Dashboard.jsx  NewTest.jsx  (+3 more)
(+11 files in other folders)
