[package]
name = "paryxa-server"
version = "0.1.0"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]

[dependencies]
warp = "0.1.7"
diesel = { version = "1.3.3", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "0.13.0"
chrono = "0.4.6"
uuid = { version = "0.6.5", features = ["serde"] }
failure = "0.1.3"
serde = "1.0.80"
serde_derive = "1.0.80"
bcrypt = "0.2.1"
env_logger = "0.5.13"
futures = "0.1.25"
juniper = "0.10.0"
juniper_warp = "0.1.0"
serde_json = "1.0.32"
log = "0.4.5"
